# amipython

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
amiberry/: example.uae
amiberry_boot/S/: Startup-Sequence
docker/: Dockerfile.ace  patch_ace.py
docs/: amiberry.md  architecture.md  blitz-comparison.md  credits.md  devlog.md  language.md  preview.md
examples/: CMakeLists.txt  hello  hello.c
examples/amifish/: amifish  amifish.py
examples/amifish/data/: generate_assets.py
examples/amitetris/: amitetris  amitetris.py
examples/animation/: bounce_int.py  bouncing_ball.py  bouncing_blits.py  doublebuffer_balls.py  orbiting_ball.py  qblit_balls.py  vector_stars_3d  vector_stars_3d.py
examples/basic/: CMakeLists.txt  display1  display1.py  grid_pattern.py  minimal_display  minimal_display.py  palette_bars.py  score_display  score_display.py  seven_bag.py
examples/demo/: alien_breed_starfield  alien_breed_starfield.py  amipython_demo.py  game  game.py  generate_assets.py  logo  logo.py  logo_grab  logo_grab.py  starfield_nologo  starfield_nologo.py
examples/demo/data/: eq_bars.bm  logo.bm  logo_mask.bm  map.json
examples/drawing/: mouse_lines.py  polygon.py  random_circles.py
examples/effects/: copper_gradient  copper_gradient.py  copper_lines.py  equaliser  equaliser.py  pixel_explosion.py  starfield_horizontal.py  starfield_radial.py  triple_layer_copper.py
examples/effects/data/: eq_bars_mask.bm
examples/input/: edge_trigger.py  joystick_mouse.py  keyboard_keys.py  keyboard_status.py  keyboard_typing.py
examples/palette/: fade  fade.py
examples/scrolling/: dual_playfield.py  dual_playfield_auto  dual_playfield_auto.py  momentum_scroll.py  smooth_scroll.py  tile_scroll_doublebuffer.py  tilemap_scroll  tilemap_scroll.py
examples/sound/: music.py  sfx_blip.py
examples/sprites/: sprite_collision  sprite_collision.py  sprite_move.py  sprite_priority.py
examples/storage/: high_scores.py
src/amiga/: __init__.py  _backend.py  _bitmap.py  _builtins.py  _collision.py  _constants.py  _copper.py  _display.py  _dual_playfield.py  _joy.py  _key.py  _mouse.py  _music.py  _palette.py  _sfx.py  _shape.py  _sprite.py  _storage.py  _tilemap.py
src/amipython/: __init__.py  __main__.py  adf.py  amiberry.py  assets.py  cli.py  docker.py  emit.py  engine.py  errors.py  parse.py  pipeline.py  typecheck.py  types.py  validate.py
src/amipython/c_runtime/: amipython.h  amipython_engine.h  amipython_engine_amiga.c  amipython_engine_host.c
tests/: test_adf.py  test_amiga_preview.py  test_assets.py  test_compile_amiga.py  test_compile_host.py  test_emit.py  test_engine.py  test_pipeline.py  test_typecheck.py  test_validate.py
tests/fixtures/: arithmetic.c  arithmetic.py  control_flow.c  control_flow.py  display1.c  display1.py  functions.c  functions.py  hello.py
